test/cases/parser/VarError1.errors
src/VarError1.b:6:3: Syntax error (expected variable name)
