test/cases/parser/VarError1.b
module VarError1
interface {
  function f()
  {
    var
  }
}
